# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-and-tests.yml
gendiff/: __init__.py  ast_maker.py  gendiff.py  input_parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
tests/: test_gendiff.py
tests/fixtures/: expected_result.py  nested1.json  nested1.yaml  plain1.yml  plain2.yaml  plain_nested_expected_12  stylish_nested_expected_12
